--- a/app.css
+++ b/app.css
@@ -1,28 +1,12 @@
 body{
-    --bs-body-color: hsl(0, 0%, 89%);
-    --bs-body-bg: black;
+    margin: 0;
     --bs-body-font-family: 'Inter', sans-serif;
     min-height: 100vh;
     width: 100%;
+    color: hsl(0, 0%, 89%);
 }
 
-h1, h2{
-    font-family: 'Prata', sans-serif;
-    margin-top: 1rem;
-}
-p{
-    font-weight: 200;
-    font-size: 0.8rem;
-    line-height: 1.3rem;
-    text-align: left;
-}
-.navbar{
-    --bs-navbar-color: hsl(0, 0%, 89%);;
-    --bs-navbar-brand-color: hsl(0, 0%, 89%);
-    --bs-navbar-nav-link-padding-x: 1rem;
-}
-
-.container, .container-fluid {
+.container-fluid {
     --bs-gutter-x: 5rem;
     --bs-gutter-y: 2rem;
     width: 100%;
@@ -33,39 +17,62 @@ p{
     margin-left: auto;
 }
 
+h1, h2{
+    font-family: 'Prata', sans-serif;
+    /*margin-top: 1rem;*/
+
+}
+
+h2{
+    font-size: 1.5rem;
+}
+
+p{
+    font-weight: 200;
+    font-size: 0.8rem;
+    line-height: 1.3rem;
+
+}
+
+/*--------------- NAVIGATION ----------------*/
+.navbar{
+    --bs-navbar-color: hsl(0, 0%, 89%);;
+    --bs-navbar-brand-color: hsl(0, 0%, 89%);
+    --bs-navbar-nav-link-padding-x: 1rem;
+}
+
 .navbar-brand{
-    font-size: .75rem;
+    font-size: .79rem;
+    font-family: 'Prata', sans-serif;
     transition: color 200ms ease;
 }
-.navbar-brand:hover{
+
+.navbar-brand:hover, .nav-link:hover{
     color: rgb(73, 163, 236);
     cursor: pointer;
 }
+
+.navbar-brand:focus, .nav-link:focus{
+    color: rgb(141, 139, 139); 
+}
+
 .nav-link{
     font-size: .75rem;
     transition: color 200ms ease;
 }
-.nav-link:hover{
-    color: rgb(73, 163, 236);
-    cursor: pointer;
-    
-}
-.nav-link:focus{
-    color: rgb(141, 139, 139);
-    font-size: .8rem;
-}
+
 .navbar-nav{
     margin: 0 auto;
 }
+
 a.nav-link{
     padding: 0 35px;
 }
-.layer{
-    margin: 25px 0;
+
+.nav-item{
+    font-weight: 100;
 }
-.padd{
-    margin-bottom: 35px;
-}
+
 .btn{
     font-size: 14px;
     --bs-btn-color: #212529;
@@ -73,41 +80,52 @@ a.nav-link{
     --bs-btn-border-radius: none;
     transition: background-color 100ms ease-out
 }
+
 .btn:hover{
     background-color: transparent;
+    color: beige;
 }
+
 .btn:focus{
     background-color: rgb(226, 226, 73);
     color: black;
     border: 1px solid black;
 }
+
+/*------------------- END OF NAVIGATION --------------------*/
+
+
+/*------------------- THIRD SECTION -----------------------*/
 .greyBg{
     margin-top: 45px;
     padding-top: 20px;
-    background-color: gray;
-}
-
-section .layer .row{
-    margin: 100px 0;
+    background-color: rgb(54, 54, 59);
 }
 
 
+/*------------------ MEDIA QUERIES --------------------*/
+@media(max-width: 575px){
+    .container-fluid {
+        --bs-gutter-x: .5rem;
+        --bs-gutter-y: .125rem;
+        padding-right: calc(var(--bs-gutter-x) * .5);
+        padding-left: calc(var(--bs-gutter-x) * .5);
+        padding-top: calc(var(--bs-gutter-y) * .5);
+    }
+}
 
 @media(max-width: 767px){
-    .navbar{
-        --bs-navbar-padding-y: 2rem;
-    }
-    .logos{
-        padding: 10px 25px;
+    .container-fluid {
+        --bs-gutter-x: 1rem;
+        --bs-gutter-y: .25rem;
     }
     .image-line{
         width: 100%;
     }
-    .container, .container-fluid {
-        --bs-gutter-x: 1rem;
-        --bs-gutter-y: .25rem;
-        padding-right: calc(var(--bs-gutter-x) * 1);
-        padding-left: calc(var(--bs-gutter-x) * 1);
-        padding-top: calc(var(--bs-gutter-y) * .25);
+}
+
+@media(max-width: 991px){
+    .container-fluid {
+        --bs-gutter-x: 2rem;   
     }
 }
