--- a/app.css
+++ b/app.css
@@ -7,7 +7,8 @@ body , a {
     color: #fff;
     text-decoration: none;
     font-size: 1em;
-    font-family: 'Inter', sans-serif
+    font-family: 'Inter', sans-serif;
+    overflow-x: hidden;
 }
 
 h1, h2, h3, h4 {
@@ -26,6 +27,10 @@ p {
     font-weight: 200;
 }
 
+li {
+    list-style: none;
+}
+
 main {
     width: 100%;
     background-color: rgba(0, 0, 0, .98);
@@ -36,6 +41,7 @@ nav {
     display: flex;
     justify-content: space-between;
     padding-top: 1em;
+    position: relative;
 }
 
 nav a, .navbar a {
@@ -130,6 +136,11 @@ section {
     border: none;
     background-color: rgba(255, 255, 0, .98);
 }
+
+.btn-nav {
+    display: none;
+}
+
 /****************END OF SECTION ***********************/
 
 /*****************FOOTER ***************************/
@@ -154,9 +165,21 @@ footer {
     width: 1.3em;
 }
 
-@media screen and (min-width: 768px) {
+.mobile-toggle {
+    display: none;
+}
+
+@media screen and (min-width: 426px) {
     main {
         padding: 2em;
+    }
+
+    .nav-links {
+        display: flex;
+    }
+
+    .nav-links li {
+        padding: 0 1em;
     }
 
     .hero h1 {
@@ -209,11 +232,132 @@ footer {
     }
 }
 
+/*            NAVIGATION MEDIA QUERY-SMALL DEVICES          */
+
+@media screen and (max-width: 500px) {
+    
+    .hidden {
+        opacity: 0;
+        filter: blur(3px);
+        transition: all 1s;
+    }
+
+    .show {
+        opacity: 1;
+        filter: blur(0);
+    }
+
+    .nav-links {
+        display: flex;
+        flex-direction: column;
+        gap: 3em;
+        position: fixed;
+        inset: 0 0 0 40%;
+        background-color: rgba(255, 255, 255, .1);
+        backdrop-filter: blur(.5em);
+        padding: 8em 2em;
+        z-index: 1000;
+
+        transform: translatex(100%);
+        transition: transform 250ms ease-out;
+    }
+
+    .link__nav {
+        text-transform: uppercase;
+    }
+
+    
+    .nav-links[data-visible='true'] {
+        transform: translatex(0%);
+    }
+    
+    .mobile-toggle {
+        display: block;
+        position: absolute;
+        z-index: 9999;
+        top: 1em;
+        right: 1em;
+        background: url(./Assets/Hamburger\ Menu.svg);
+        background-repeat: no-repeat;
+        width: 2rem;
+        aspect-ratio: 1;
+        border: none;
+    }
+
+    .mobile-toggle[aria-expanded='true'] {
+        background: url(./Assets/Close.svg);
+        background-repeat: no-repeat;
+    }
+
+}
+
+
+@media screen and (min-width: 600px) {
+    nav {
+        align-items: center;
+    }
+
+    .btn-nav {
+        display: block;
+    }
+    
+}
+
+@media screen and (min-width: 687px) {
+
+    main, article, section, footer {
+        padding: 0 5em;
+    }
+
+    .get-access:last-child {
+        padding-bottom: 2em;
+    }
+    .hero {
+        width: 80%;
+    }
+}
 
 /*************MEDIA QUERY FOR DESKTOP DEVICES***************/
 @media screen and (min-width: 1024px) {
-    main {
-        padding: 2.5em 4em;
+
+    nav {
+        align-items: center;
+    }
+
+    .hamburger-links {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .nav-links {
+        display: flex;
+    }
+
+    .nav-links li {
+        padding: 0 1em;
+    }
+
+    .link__nav {
+        position: relative;
+
+    }
+
+    .link__nav::after {
+        content: '';
+        position: absolute;
+        width: 100%;
+        bottom: -2px;
+        left: 0;
+        height: 1px;
+        background-color: #fff;
+        transform: scaleX(0);
+        transform-origin: right;
+        transition: transform 250ms ease-out;
+    }
+
+    .link__nav:hover::after {
+        transform: scaleX(1);
+        transform-origin: left;
     }
 
     .hero {
@@ -225,7 +369,8 @@ footer {
     }
 
     .hero p {
-        width: 90%;
+        width: 80%;
+        font-size: 1em;
     }
 
     .brand-logo {
@@ -249,7 +394,7 @@ footer {
     }
 
     .article-container {
-        padding: 2em 0;
+        padding-top: 2em;
     }
 
     .article-section-1 h2 {
@@ -283,18 +428,25 @@ footer {
 
     .btn {
        cursor: pointer;
-       transition: all .5s ease;
+       position: relative;
+       z-index: 1;
     }
 
-    .btn:hover {
-        background-color: transparent;
-        border: 1px solid rgba(255, 255, 0, .98);
-        color: rgba(255, 255, 0, .98);
+    .btn::after {
+        content: '';
+        position: absolute;
+        background-color: #333;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+        transform: scaleX(0);
+        transition: transform 300ms ease-out;
     }
 
-    .btn:focus {
-        background-color: rgba(255, 255, 0, .5);
+    .btn:hover::after {
+        transform: scaleX(1);
     }
-
-
+    
 }
